--- a/practica-clase5/test1/src/main/resources/application.properties
+++ b/practica-clase5/test1/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.application.name=test1
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/springdb
+spring.datasource.username=root
+spring.datasource.password=1234
+
+# Hibernate valida el esquema sin modificarlo
+spring.jpa.hibernate.ddl-auto=validate
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+
+# Para ver los parámetros de las consultas
+logging.level.org.hibernate.orm.jdbc.bind=trace
