Practicas de las clases

--- a/Practice_8/DocumentExport/src/main/resources/application.properties
+++ b/Practice_8/DocumentExport/src/main/resources/application.properties
@@ -14,5 +14,9 @@ spring.jpa.hibernate.ddl-auto=none
 # ---- Configuración de Cliente ----
 # URL del servicio del que dependemos.
 # Usamos el nombre del host 'localhost' porque ambos corren localmente.
-client.customer-service.url=http://localhost:8081/api/customers
+client.customer-service.url=http://localhost:8081/api/v1/customers
 # En producción, esto sería un nombre de servicio (p.ej., 'customer-service.default.svc.cluster.local' en Kubernetes)
+
+# Logging
+logging.level.org.springframework.web=debug
+logging.level.org.hibernate=error
