--- a/Practice_8/customer-service/src/main/resources/application-prod.properties
+++ b/Practice_8/customer-service/src/main/resources/application-prod.properties
@@ -1,3 +1,11 @@
+# Configuración de la base de datos H2 en memoria
+spring.datasource.url=jdbc:postgre:customerdb
+spring.datasource.driverClassName=org.postgre.Driver
+spring.datasource.username={$variableentorno1}
+spring.datasource.password={$variableentorno2}
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=none
+
 # Configuracion level Logging
 logging.level.org.springframework.web=info
 logging.level.org.hibernate=error
