--- a/Practice_8/customer-service/src/main/resources/application-dev.properties
+++ b/Practice_8/customer-service/src/main/resources/application-dev.properties
@@ -1,3 +1,13 @@
+server.port=8081
+
+# Configuración de la base de datos H2 en memoria
+spring.datasource.url=jdbc:h2:mem:customerdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=none
+
 # Configuracion level Logging
 logging.level.org.springframework.web=debug
 logging.level.org.hibernate=error
@@ -5,3 +15,5 @@ logging.level.org.hibernate=error
 # Habilitar la consola de H2 para depuración
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+spring.config.activate=dev
