--- a/Practica-Final/DACourses/src/main/resources/application-prod.properties
+++ b/Practica-Final/DACourses/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
-server.port=8082
+server.port=8084
 
 # URL de Conexión
 spring.datasource.url=jdbc:mysql://localhost:3306/mysqldb?serverTimezone=UTC
@@ -10,7 +10,7 @@ spring.datasource.password=1234
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
-# Puedes mantener esta propiedad en update o ajustarla en validate
+# Puedes mantener esta propiedad o ajustarla según necesites
 spring.jpa.hibernate.ddl-auto=update
 
 # Configuracion level Logging
