--- a/Practica-Final/DACourses/src/main/resources/application.properties
+++ b/Practica-Final/DACourses/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=DACourses
+
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+spring.profiles.active=dev
