--- a/Practica-Final/DigitalAcademy/src/main/resources/application.properties
+++ b/Practica-Final/DigitalAcademy/src/main/resources/application.properties
@@ -4,4 +4,4 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-spring.profiles.active=prod
+spring.profiles.active=dev
