Intentando integrar Feign

--- a/Practica-Final/DACourses/src/main/resources/application-dev.properties
+++ b/Practica-Final/DACourses/src/main/resources/application-dev.properties
@@ -13,3 +13,6 @@ spring.jpa.hibernate.ddl-auto=update
 # Configuracion level Logging
 logging.level.org.springframework.web=debug
 logging.level.org.hibernate=error
+
+# Feign
+student-service.url=http://localhost:8081/api/v1/student
