--- a/Practica-Final/DACourses/src/main/resources/application-dev.properties
+++ b/Practica-Final/DACourses/src/main/resources/application-dev.properties
@@ -15,4 +15,4 @@ logging.level.org.springframework.web=debug
 logging.level.org.hibernate=error
 
 # Feign
-student-service.url=http://localhost:8081/api/v1/student
+student-service.url=http://localhost:8081
