--- a/Practica-Final/DigitalAcademy/src/main/resources/application.properties
+++ b/Practica-Final/DigitalAcademy/src/main/resources/application.properties
@@ -5,3 +5,12 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 spring.profiles.active=dev
+
+# Configuracion de OpenAPI (Swagger)
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.api-docs.path=/v3/api-docs
+# Logging Filter
+logging.filter.enabled=true
+
+# Patron de logging que incluye el traceId (%X{traceId})
+logging.pattern.console=%d{HH:mm:ss.SSS} [%thread] %-5level %logger{36} [%X{traceId}] [${spring.application.name}] - %msg%n
