--- a/Practica-Final/DAProgress/pom.xml
+++ b/Practica-Final/DAProgress/pom.xml
@@ -71,9 +71,8 @@
             <version>2.8.13</version>
         </dependency>
         <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-openfeign</artifactId>
-            <version>4.3.0</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-webflux</artifactId>
         </dependency>
         <dependency>
             <groupId>com.h2database</groupId>
