--- a/Practica-Final/DAReports/src/main/resources/application-dev.properties
+++ b/Practica-Final/DAReports/src/main/resources/application-dev.properties
@@ -1,4 +1,4 @@
-server.port=8085
+server.port=8083
 
 # Configuracion de la base de datos (PostgreSQL)
 spring.datasource.url=jdbc:postgresql://localhost:5432/springdb
@@ -14,7 +14,5 @@ spring.jpa.hibernate.ddl-auto=update
 logging.level.org.springframework.web=debug
 logging.level.org.hibernate=error
 
-# Servicios externos
-services.student.url=http://localhost:8081/api/v1/student
-services.course.url=http://localhost:8083/api/v1/cursos
-services.enrollment.url=http://localhost:8083/api/v1/inscripciones
+# Feign
+student-service.url=http://localhost:8081
