--- a/Practica-Final/DAReports/src/main/resources/application-dev.properties
+++ b/Practica-Final/DAReports/src/main/resources/application-dev.properties
@@ -1,4 +1,4 @@
-server.port=8083
+server.port=8087
 
 # Configuracion de la base de datos (PostgreSQL)
 spring.datasource.url=jdbc:postgresql://localhost:5432/springdb
@@ -15,4 +15,6 @@ logging.level.org.springframework.web=debug
 logging.level.org.hibernate=error
 
 # Feign
-student-service.url=http://localhost:8081
+student-service.url=http://localhost:8081/api/v1/student
+course-service.url=http://localhost:8083/api/v1/cursos
+progress-service.url=http://localhost:8085/api/v1/progreso
