--- a/Practica-Final/DAReports/src/main/resources/application.properties
+++ b/Practica-Final/DAReports/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=DACourses
+spring.application.name=DAReports
 
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.properties.hibernate.show_sql=true
