--- a/Practica-Final/DAProgress/pom.xml
+++ b/Practica-Final/DAProgress/pom.xml
@@ -81,6 +81,11 @@
             <artifactId>h2</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+            <version>4.3.0</version>
+        </dependency>
 	</dependencies>
 
 	<build>
